package it.unipi.makermanagerserver.model.inventory;

public class ArticoloInventario {
    
}
